<resources>
    <string name="app_name">Vertical Scrolling Form</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="occupation">Occupation</string>
    <string name="street_address">Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="submit">Submit</string>
</resources>